feat: draft of remote interactions + ban command
